--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "manifest_version": 2,
     "name": "好的！武漢肺炎",
     "short_name": "OkWuHanPneumonia",
-    "description": "「好的！武漢肺炎」厭倦舔共媒體與共匪同路人堅持使用新冠肺炎嗎？？不要再吵惹，直接一鍵全部變回武漢肺炎！！",
-    "version": "0.0",
+    "description": "「好的！武漢肺炎」：厭倦舔共媒體與共匪同路人堅持使用新冠肺炎嗎？？不要再吵惹，直接一鍵全部變回武漢肺炎！！",
+    "version": "0.1.1.1",
     "version_name": "o'_'o",
     "icons": {
         "128": "favicon.ico"
